--- a/index.html
+++ b/index.html
@@ -6,85 +6,169 @@
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Portfolio</title>
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <a href="index.html" class="navbar-brand"><img src="assets/img/Logo-MTB.png" alt="Logo"></a>
-                <ul class="nav nav-underline">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://linktr.ee/marianetelesbento">Contact me</a></li>
-                </ul>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" arial-controls="navbarNav" arial-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon "></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="nav-underline navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://linktr.ee/marianetelesbento">Contact me</a></li>
+                    </ul>
+                </div>
             </div>     
         </nav>
     </header>
     <main>
-        <div class="hero">
-            <section class="container min-vh-100 align-content-center">
-                <div>
-                    <h1>Mariane <br><span>Teles Bento</span></h1>
-                    <h2>Software Developer</h2>
+        <section class="hero">
+            <div class="container px-4 py-5 ">
+                <div class="row flex-lg-row-reverse align-items-center g-5 py-5" style="min-height: 70vh;">
+                    <!-- <div class="col-10 col-sm-8 col-lg-6"> <img src="bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy"> </div> -->
+                    <div class="col-lg-12">
+                        <h1 class="font-monospace display-5">Mariane<br><span class="font-monospace display-5">Teles Bento</span></h1>
+                        <h2 class="fs-4 letter-animation">SOFTWARE DEVELOPER</h2>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-start mt-4">
+                            <a href="#about" class="btn-link">About me</a>
+                            <a href="https://linktr.ee/marianetelesbento" class="btn-link">Contact me</a>
+                        </div>
+                        <!-- <div class="mt-2">
+                            <img src="assets/img/icos/linkedin.svg" alt="linkedin logo">
+                            <img src="assets/img/icos/github.svg" alt="github logo">
+                        </div>  -->
+                    </div>
                 </div>
-                <div>
-                    <a href="#about" class="btn-info">About me</a>
-                    <a href="https://linktr.ee/marianetelesbento">Contact me</a>
+            </div>
+        </section>
+        <section id="banner" class="container-fluid bg-dark text-white text-center p-5"> 
+            Passando fotos dos sites que fiz (em breve) <!--Motrar as fotos com link para o site no github pages-->
+        </section>
+        <section id="about" class="container px-4 py-5 ">
+
+            <div class=" row align-items-center gap-5 ">
+                <div class="col" >
+                    <img src="assets/img/graph.png" alt="about me" class="w-100 p-lg-5">
                 </div>
-                <div >
-                    <img src="assets/img/icos/linkedin.svg" alt="linkedin logo">
-                    <img src="assets/img/icos/github.svg" alt="github logo">
+                <div class="col">
+                    <h3 class="mb-4">About me</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, porro repellat fuga officiis explicabo minima officia assumenda sit quas est ipsam non tempora earum laborum saepe vero velit eveniet autem?</p>
                 </div>
-            </section>
-        </div>
-        <section id="about" class="container min-vh-100 ">
-            <h3 class="text-center">About me</h3>
-            <div class="">
-                <div>
-                    <p>Junior Developer in training, with experience as a freelancer in C#, ASP.NET, and frontend development. Works on building APIs and responsive interfaces. Proactive, organized, and a fast learner. Seeking a first formal opportunity to apply knowledge and grow professionally.</p>
-                    <ul>
-                        <li>Fiap - ADS- 1/4</li>
-                        <li>Senac - Computer Technician - Complete</li>
+            </div>
+
+            <div class="row align-items-stretch mt-4 gap-lg-5 gap-4">
+                <div class="col d-flex flex-column h-100 gap-4">
+                    <div >
+                        <h4 class="mb-4">Contacts</h4>
+                        <ul class="list-group list-unstyled gap-1">
+                            <li><i class="bi bi-telephone-fill me-2"></i>11 91454-7954</li>
+                            <li><i class="bi bi-envelope-at-fill me-2"></i><a href="mailto:marianebteles2021@hotmail.com">marianebteles2021@hotmail.com</a></li>       
+                            <li><i class="bi  bi-linkedin me-2"></i><a href="http://linkedin.com/in/mariane-teles-bento-66004522a/">mariane-teles-bento</a></li>
+                        </ul>
+                    </div>
+                    <div class="mt-auto">
+                        <h4 class="mb-4">Languages</h4>
+                        <ul class="list-group list-unstyled">
+                            <li>Portuguese - Native</li>
+                            <li>English - Basic</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col">
+                    <h4 class="mb-4">Education / Experience</h4>
+                    <ul class="list-group list-unstyled gap-4">
+                        <li>2024 - 2024 | Backend with .NET (Randstad)</li>
+                        <li>2024 - 2025 | Senac - Computer Technician</li>
+                        <li>2024 - 2025 | BJJ Gerenciamento</li> 
+                        <li>2024 - 2025 | Dev On - Web Developer</li>
+                        <li>2025 - 2026 | Fiap - ADS</li>
+                    </ul>
+                    <!-- <ul class="list-group list-unstyled gap-4 col">
+                            <li>2024 - 2025</li> 
+                            <li>2024 - 2026</li>
+                            <li>2025 - ...</li>
+                            <li>2025 - 2026</li>
+                            <li>2025 - 2026</li>
+                        </ul>
+                        <ul class="list-group list-unstyled gap-4 col">
+                            <li>Senac - Computer Technician</li> 
+                            <li>Dev On - Web Developer</li>
+                            <li>Fiap - ADS </li>
+                            <li>Fiap - ADS </li>
+                            <li>Fiap - ADS </li>
+                        </ul> -->
+                </div>
+            </div>
+        </section>
+        <section id="skills" class="container px-4 py-5 ">
+            <div class="row align-items-center gap-5 ">
+                <div class="col">
+                    <h3 class="text-center">Soft Skills</h3>
+                    <ul class="list-group text-center">
+                        <li>Flexibility</li>
+                        <li>Agility</li>
+                        <li>Team work</li>
+                        <li>Creativity</li>
+                        <li>Organization</li>
+                        <li>Communication</li>
                     </ul>
                 </div>
-                <img src="assets/img/graph.png" alt="graph">
-            </div>
-        </section>
-        <section id="skills" class="container min-vh-100 row-cols-1">
-            <div>
-                <h3>Soft Skills</h3>
-                <ul>
-                    <li>Flexibility</li>
-                    <li>Agility</li>
-                    <li>Team work</li>
-                    <li>Creativity</li>
-                    <li>Organization</li>
-                    <li>Communication</li>
-                </ul>
-            </div>
-            <div>
-                <h3>Technical Skills</h3>
-                <ul>
-                    <li>C#<span>nível</span></li>
-                    <li>.NET MVC<span>nível</span></li>
-                    <li>APIs Rest<span>nível</span></li>
-                    <li>HTML<span>nível</span></li>
-                    <li>CSS<span>nível</span></li>
-                    <li>Bootstrap<span>nível</span></li>
-                    <li>JavaScript<span>nível</span></li>
-                </ul>
-            </div>
-        </section>
-        <section id="gallery" class="container min-vh-100">
-            <h3>Gallery</h3>
-            <div>
-                <img src="assets/img/bjj-cell.png" alt="Screenshot site BJJ Gerenciamento">
-                <img src="assets/img/bjj-notebook.png" alt="Screenshot site BJJ Gerenciamento">
-                <p>BJJ Gerenciamento</p>
+                <div class="col">
+                    <h3 class="text-center">Technical Skills</h3>
+                    <div class="d-flex justify-content-around align-items-center">
+                        C#
+                        <div class="progress w-25" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar" style="width: 50%"></div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-around align-items-center">
+                        .NET MVC
+                        <div class="progress w-25" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar" style="width: 50%"></div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-around align-items-center">
+                        APIs Rest
+                        <div class="progress w-25" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar" style="width: 50%"></div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-around align-items-center">
+                        HTML
+                        <div class="progress w-25" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar" style="width: 50%"></div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-around align-items-center">
+                        CSS
+                        <div class="progress w-25" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar" style="width: 50%"></div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-around align-items-center">
+                        Bootstrap
+                        <div class="progress w-25" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar" style="width: 50%"></div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-around align-items-center">
+                        JavaScript
+                        <div class="progress w-25" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar" style="width: 50%"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
